Circle for two home arenas

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -21,7 +21,7 @@
         // Inspired from github folder for Complex Markers
         //Creates Location Markers with PNG image for custom marker
         const Arenas = [
-          ["Caledon East Arena", 43.874101196866874, -79.86000044235615, 1, "stadium.png" ],
+          ["Caledon East Arena", 43.874101196866874, -79.86000044235615, 1, "circle.png" ],
           ["CAA Centre", 43.66748097782542, -79.70759705781691, 2, "stadium.png" ],
           ["Brampton Memorial Arena", 43.679048818084496, -79.75874645966024, 3, "stadium.png" ],
           ["Harry Lumley Bayshore Community Centre", 44.580178255490594, -80.93451459275066, 4, "stadium.png" ],
@@ -40,7 +40,7 @@
           ["Joshua's Creek Arenas", 43.491980265848625, -79.67621403082993, 17, "stadium.png" ],
           ["Glen Abbey Community Centre", 43.43566383062689, -79.73896005782244, 18, "stadium.png" ],
           ["Aldershot Arena", 43.316773895786646, -79.83322151733853, 19, "stadium.png" ],
-          ["Mayfield Arena", 43.77525764451859, -79.7834112289795, 20, "stadium.png" ],
+          ["Mayfield Arena", 43.77525764451859, -79.7834112289795, 20, "circle.png" ],
 
         ];
 
