FINAL CHANGES AND EDITS

--- a/story/CustomMap.html
+++ b/story/CustomMap.html
@@ -145,7 +145,7 @@
     <!--Background information-->
     <p class="Generalinfo"> The locations shown above show the arena's within the Toronto region extending all the way to Owen Sound and St.Catherines. These are some of the various arenas that the OMHA (Ontario
         Minor Hockey Association) teams play in. There are teams in the OMHA spread throughout Ontario, but mainly Southern Ontario. The markers above indicate some fo the locations which I have 
-        personally played at throughout my rebp hockey career for Caledon. The spatial distrinution appears to be clustered near Toronto and Missisauga and this is strictly due to the level of 
+        personally played at throughout my rep hockey career for Caledon. The spatial distribution appears to be clustered near Toronto and Missisauga and this is strictly due to the level of 
         hockey you play and the league you are in. The lower the level, typically results in less travelling. As this increases, the distance of teams will increase as more and better competition
         is now in your league. This is why Owen sound and St.Catherines are shown within the map. In my experience, I started at the AE level and went up to AA. This increased the scope of teams 
         and distance changes can then be seen throughout the map by the general locations of the arenas.  </p>
@@ -155,6 +155,7 @@
     <h2>Mayfield Arena</h2>
     <p class="arena"> Mayfield arena is the older ice complex within the region of Caledon and was the home arena of the rep program when I played 5 years ago. Now it has transitioned to being
       primarily used for team practices rather then games.</p>
+      <p class="arena"> These two home arenas are represnted on the map as black circles in comparison to the other teams arenas which are shown with stadium icons. </p>
   </body>
   
   <footer>
